== 0.7.1

== fixes

* allow normal debugger to operate if tests not run within spork

== 0.7.0

== features

* Experimental ruby-debug support for spork.  See features/spork_debugger.feature for usage.  May not work in certain setups, please report any issues with it!

== 0.6.3

== fixes

* the regression fix in 0.6.2 was not actually a bug with spork, but a bug with the test framework integration, and fixing it this way broke cucumber and rspec. doh! (sorry)

== 0.6.2

== Bug-fix

* fixes regression where entry point was not being loaded (which basically rendered Spork speed gains non-existent)
* prevent the client from listening for DRb calls

== 0.6.1

== Bug-fix

* fixes regression where abort wasn't working.

== 0.6.0

== Features

* auto-load spork supplementary test_framework gems. This will allow anyone to release a gem that enables support for a given test framework. (spork-testunit)

=== Notably

* refactoring. RunStrategy extracted from server, paving the way for different ways of running tests (windows support)

== 0.5.11

=== Bugfixes

* bugfix: no-longer load cucumber when rspec is being used

=== Notably

* refactoring. TestFramework class extracted from Server (should've been that way from the beginning). Runner no longer handling TestFramework selection logic, extracted that to a factory method. Hurray for refactoring.

== 0.5.10

Failed release. Github doesn't allow one to repent of a failed release, so, here it is.  It's exactly the same as 0.5.9

== 0.5.9

=== Bugfixes

* bugfix: More fixes for Cucumber 0.4.

== 0.5.8 2009-08-13

 === Bugfixes
 
 * bugfix: Add compatibility for Cucumber 0.4.

== 0.5.7 2009-06-17

 === Bugfixes
 
 * bugfix: Spork was allowing view eager-loading to happen during prefork in Rails 2.2.x, 2.3.x

== 0.5.6 2009-06-10

 === Bugfixes
 
 * bugfix: cucumber was logging to log/test.log, even though RAILS_ENV 'features' was specified

== 0.5.5 2009-06-10

 === Bugfixes
 