@@ -1,3 +1,5 @@
+* prevent situation where debugger stops functioning if connection is dropped by ctrl-c or other forceful means.
+
 == 0.7.1
 
 == fixes
